--- a/frontend/src/app/components/components/component-form/component-form.component.html
+++ b/frontend/src/app/components/components/component-form/component-form.component.html
@@ -25,13 +25,13 @@
         </div>
       </div>
     </div>
-    <label for="scientific_name" class="fs-xs mb-0">Nombre científico</label>
+    <label for="scientific_name" class="fs-xs mb-0">Nombre científico (INCI)</label>
     <div class="mb-2 custom-input-labeled">
       <input
         type="text"
         [formControl]="scientific_name"
         class="dark-input"
-        placeholder="Nombre científico"
+        placeholder="Nombre científico (INCI)"
       />
     </div>
     <label for="expiration_date" class="fs-xs mb-0">Fecha de caducidad</label>
