dataseeder and fixes

--- a/frontend/src/app/components/components/component-form/component-form.component.html
+++ b/frontend/src/app/components/components/component-form/component-form.component.html
@@ -64,7 +64,7 @@
       <h3 class="my-1">Fase del proceso al que pertenecen</h3>
       <div class="flex flex-row flex-wrap gap-1">
         <div
-          class="rounded-full border-2 px-4 cursor-pointer"
+          class="rounded-full border-2 px-4 cursor-pointer text-nowrap self-center"
           [ngStyle]="{
             'border-color': phase.color,
             color: phase_id.value === phase.id ? '#fff' : phase.color,
