--- a/frontend/src/app/auth/components/reset-password/reset-password.component.html
+++ b/frontend/src/app/auth/components/reset-password/reset-password.component.html
@@ -16,12 +16,12 @@
             *ngIf="password.errors && (password.touched || password.dirty)"
             class="form-errors"
           >
-            <span *ngIf="password.errors.required">Password is required</span>
+            <span *ngIf="password.errors.required">Campo obligatorio</span>
             <span *ngIf="password.errors.minlength"
-              >Password must be greater tha 8 characters</span
+              >La contraseña debe ser mayor de 6 caracteres</span
             >
             <span *ngIf="password.errors.maxlength"
-              >Password can be max 16 characters long</span
+              >La contraseña debe ser menor que 16 caracteres</span
             >
           </div>
         </div>
@@ -43,13 +43,10 @@
             class="form-errors"
           >
             <span *ngIf="password_confirmation.errors.required"
-              >Password is required</span
+              >Campo obligatorio</span
             >
-            <span *ngIf="password_confirmation.errors.minlength"
-              >Password must be greater tha 8 characters</span
-            >
-            <span *ngIf="password_confirmation.errors.maxlength"
-              >Password can be max 16 characters long</span
+            <span *ngIf="password_confirmation.errors.matchEqual"
+              >Las contraseñas no coinciden</span
             >
           </div>
         </div>
@@ -58,7 +55,7 @@
       <button
         type="submit"
         [disabled]="!resetPasswordForm.valid"
-        class="btn btn-primary shadow-thick-secondary mt-2"
+        class="btn btn-primary shadow-thick-secondary-dark mt-2"
       >
         Cambiar contraseña
       </button>
