--- a/frontend/src/app/components/components/component-details/component-details.component.html
+++ b/frontend/src/app/components/components/component-details/component-details.component.html
@@ -23,13 +23,13 @@
     component?.scientific_name
   }}</span>
   <div class="flex gap-2 flex-col my-4 md:flex-row">
-    <div class="bg-basic-900 rounded-lg w-full md:w-[30%] text-center">
+    <!-- <div class="bg-basic-900 rounded-lg w-full md:w-[30%] text-center">
       <fa-icon
         [icon]="faImage"
         class="text-secondary-100 fa-6x m-auto"
       ></fa-icon>
-    </div>
-    <div class="w-full flex flex-col justify-between w-full md:w-[70%]">
+    </div> -->
+    <div class="w-full flex flex-col justify-between w-full">
       <p>{{ component?.description }}</p>
 
       <div class="flex flex-row flex-wrap gap-1 mt-2">
