--- a/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
@@ -17,7 +17,7 @@
           *ngIf="email.errors && (email.touched || email.dirty)"
           class="form-errors"
         >
-          <span *ngIf="email.errors.required">Email is required</span>
+          <span *ngIf="email.errors.required">Campo obligatorio</span>
           <div *ngIf="email.errors.pattern">Email not a valid format.</div>
         </div>
       </div>
@@ -25,7 +25,7 @@
       <button
         type="submit"
         [disabled]="!forgotPasswordForm.valid"
-        class="btn btn-primary shadow-thick-secondary mt-2"
+        class="btn btn-primary shadow-thick-secondary-dark mt-2"
       >
         Enviar email
       </button>
