--- a/frontend/src/app/user/components/register/register.component.html
+++ b/frontend/src/app/user/components/register/register.component.html
@@ -4,14 +4,18 @@
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="mt-10">
       <div class="custom-input-labeled-container">
         <div class="custom-input-labeled">
-          <input type="text" [formControl]="name" aria-label="Name" placeholder="Nombre" />
+          <input
+            type="text"
+            [formControl]="name"
+            aria-label="Name"
+          />
           <label for="name">Nombre</label>
         </div>
         <div
           *ngIf="name.errors && (name.touched || name.dirty)"
           class="form-errors"
         >
-          <div *ngIf="name.errors.required">Name is required</div>
+          <div *ngIf="name.errors.required">Campo obligatorio</div>
           <div *ngIf="name.errors.minlength">
             Name must be at least 5 characters long.
           </div>
@@ -30,8 +34,8 @@
           *ngIf="email.errors && (email.touched || email.dirty)"
           class="form-errors"
         >
-          <span *ngIf="email.errors.required">Email is required</span>
-          <div *ngIf="email.errors.pattern">Email not a valid format.</div>
+          <span *ngIf="email.errors.required">Campo obligatorio</span>
+          <div *ngIf="email.errors.pattern">Formato de email no valido</div>
         </div>
       </div>
 
@@ -48,12 +52,12 @@
           *ngIf="password.errors && (password.touched || password.dirty)"
           class="form-errors"
         >
-          <span *ngIf="password.errors.required">Password is required</span>
+          <span *ngIf="password.errors.required">Campo obligatorio</span>
           <span *ngIf="password.errors.minlength"
-            >Password must be greater tha 8 characters</span
+            >La contraseña debe ser mayor de 6 caracteres</span
           >
           <span *ngIf="password.errors.maxlength"
-            >Password can be max 16 characters long</span
+            >La contraseña debe ser menor que 16 caracteres</span
           >
         </div>
       </div>
@@ -76,13 +80,10 @@
           class="form-errors"
         >
           <span *ngIf="password_confirmation.errors.required"
-            >Password is required</span
+            >Campo obligatorio</span
           >
-          <span *ngIf="password_confirmation.errors.minlength"
-            >Password must be greater tha 8 characters</span
-          >
-          <span *ngIf="password_confirmation.errors.maxlength"
-            >Password can be max 16 characters long</span
+          <span *ngIf="password_confirmation.errors.matchEqual"
+            >Las contraseñas no coinciden</span
           >
         </div>
       </div>
@@ -90,7 +91,7 @@
       <button
         type="submit"
         [disabled]="!registerForm.valid"
-        class="btn btn-primary shadow-thick-secondary mt-2"
+        class="btn btn-primary shadow-thick-secondary-dark mt-2"
       >
         Registrarse
       </button>
