--- a/frontend/src/app/shared/components/landing-page/landing-page.component.html
+++ b/frontend/src/app/shared/components/landing-page/landing-page.component.html
@@ -1,1 +1,223 @@
-<p>landing-page works!</p>
+<div class="limit-container p-3">
+  <div class="my-6 text-center">
+    <h2
+      class="uppercase tracking-wider text-2xl font-black max-w-[900px] m-auto"
+    >
+      <span class="text-3xl">C</span>rea tus propias formulaciones de forma
+      fácil y sencilla, guárdalas y accede a ellas siempre que lo necesites.
+      <span class="text-3xl">D</span>ispón de los componentes organizados y
+      accesibles.
+    </h2>
+    <div class="max-w-[600px] m-auto mt-2">
+      <span>
+        Simplifica las formulaciones con esta herramienta, aprovecha las
+        asignación de <span class="text-primary-500">propiedades</span> y las
+        <span class="text-primary-500">plantillas de formulación</span>
+        personalizables.
+      </span>
+    </div>
+  </div>
+  <div class="flex w-full justify-center flex-wrap mb-6">
+    <div
+      class="w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
+    >
+      <img
+        src="../../../../assets/images/organisation.svg"
+        alt="organisation"
+        width="60"
+        height="auto"
+        class="self-center"
+      />
+      <h3 class="text-center mt-2 dark:text-secondary-500">
+        Administración de datos
+      </h3>
+    </div>
+    <div
+      class="w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
+    >
+      <img
+        src="../../../../assets/images/morter.svg"
+        alt="morter"
+        width="80"
+        height="auto"
+        class="self-center"
+      />
+      <h3 class="text-center mt-2 dark:text-secondary-500">
+        Formulación sencilla
+      </h3>
+    </div>
+    <div
+      class="w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
+    >
+      <img
+        src="../../../../assets/images/magnifying_gass.svg"
+        alt="magnifying_gass"
+        width="100"
+        height="auto"
+        class="self-center"
+      />
+      <h3 class="text-center mt-2 dark:text-secondary-500">
+        Acceso customizado
+      </h3>
+    </div>
+    <div
+      class="w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
+    >
+      <img
+        src="../../../../assets/images/filter.svg"
+        alt="filter"
+        width="70"
+        height="auto"
+        class="self-center"
+      />
+      <h3 class="text-center mt-2 dark:text-secondary-500">
+        Filtrado de datos
+      </h3>
+    </div>
+  </div>
+  <div>
+    <div class="my-10">
+      <h3 class="text-blue-500 font-black uppercase text-lg tracking-wider">
+        <span class="text-2xl">F</span>ormula tus productos de forma rápida,
+        sencilla y con la infomación 100% accesible
+      </h3>
+      <p class="max-w-[600px]">
+        Filtra las recetas por las propiedades heredadas de los componentes que
+        la forman; o si lo prefieres utiliza el buscador para encontrar según el
+        nombre que le hayas puesto.
+      </p>
+      <div class="relative my-10">
+        <video
+          src="../../../../assets/images/formulation_presentation.mkv"
+          width="80%"
+          height="audio"
+          loop
+          autoplay
+          class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
+        ></video>
+        <div
+          class="w-full h-full rounded-xl bg-basic-500 absolute top-6 z-[-1] shadow-2xl"
+        ></div>
+      </div>
+    </div>
+    <div class="my-10">
+      <h3 class="text-orange-500 font-black uppercase text-lg tracking-wider">
+        <span class="text-2xl">E</span>ncuentra tus recetas con facilidad
+      </h3>
+      <p class="max-w-[600px]">
+        Filtra las recetas por las propiedades heredadas de los componentes que
+        la forman; o si lo prefieres utiliza el buscador para encontrar según el
+        nombre que le hayas puesto.
+      </p>
+      <div class="relative my-10">
+        <video
+          src="../../../../assets/images/search_presentation.mkv"
+          width="80%"
+          height="audio"
+          loop
+          autoplay
+          class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
+        ></video>
+        <div
+          class="w-full h-full rounded-xl bg-basic-500 absolute top-[-1.5rem] z-[-1] shadow-2xl"
+        ></div>
+      </div>
+    </div>
+    <div class="my-10">
+      <h3 class="text-purple-500 font-black uppercase text-lg tracking-wider text-right">
+        <span class="text-2xl">C</span>rea componentes asignandole las
+        propiedades que necesites
+      </h3>
+      <p class="max-w-[600px] ml-auto mr-0 text-right">
+        Al crear los componentes para tus recetas podrás crear las propiedades
+        que lo definen y que permitirán un filtrado mucho más sencillo y rápido.
+      </p>
+      <div class="relative my-10">
+        <video
+          src="../../../../assets/images/components_presentation.mkv"
+          width="80%"
+          height="audio"
+          loop
+          autoplay
+          class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
+        ></video>
+        <div
+          class="w-full h-full rounded-xl bg-basic-500 absolute top-[-1.5rem] z-[-1] shadow-2xl"
+        ></div>
+      </div>
+    </div>
+    <div class="my-10">
+      <h3 class="text-primary-500 font-black uppercase text-lg tracking-wider text-center">
+        <span class="text-2xl">C</span>rea distintos perfiles para gestionar
+        distintos tipos de productos
+      </h3>
+      <p class="max-w-[600px] m-auto text-center">
+        Crea distintos perfiles, a cada uno de ellos podrás asignarle distintas
+        propiedades, composiciones y fases. Así como mantener almacenados los
+        componentes y recetas de forma separada y ordenada.
+      </p>
+      <div class="relative my-10">
+        <video
+          src="../../../../assets/images/profiles_presentation.mkv"
+          width="80%"
+          height="audio"
+          loop
+          autoplay
+          class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
+        ></video>
+        <div
+          class="w-full h-full rounded-xl bg-basic-500 absolute top-6 z-[-1] shadow-2xl"
+        ></div>
+      </div>
+    </div>
+  </div>
+  <div
+    class="bg-secondary-500 dark:bg-primary-500 rounded-xl shadow-md p-6 mt-20"
+  >
+    <p class="text-2xl uppercase text-basic-500 text-center my-6 font-bold">
+      ¿ <span class="text-4xl">Q</span>uieres empezar a utilizar
+      <span class="text-primary-500 dark:text-secondary-500"
+        ><span class="text-4xl">M</span>esta</span
+      >?
+    </p>
+    <div class="w-full flex">
+      <button class="btn btn-primary-dark m-auto self-center">
+        Regístrate
+      </button>
+    </div>
+  </div>
+  <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 my-20" id="contact">
+    <div class="flex justify-end flex-col gap-4">
+      <p class="text-xl uppercase font-black text-primary-500 max-w-[400px]">
+        ¿ <span class="text-2xl"> A</span>ún tienes dudas?
+        <span class="text-2xl">C</span>ontacta con nosotras para cualquier
+        pregunta
+      </p>
+      <div class="flex gap-4 flex-col">
+        <div class="custom-input-labeled">
+          <input type="text" class="dark-input" placeholder="Nombre" />
+        </div>
+        <div class="custom-input-labeled">
+          <input
+            type="email"
+            class="dark-input"
+            placeholder="Correo electrónico"
+          />
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="custom-input-labeled">
+        <textarea
+          name="description"
+          class="dark-input"
+          rows="8"
+          placeholder="Escribe aquí tus dudas"
+        ></textarea>
+      </div>
+    </div>
+    <div class="w-full flex mt-4 col-start-1 col-end-3">
+      <button class="btn btn-primary m-auto self-center">Contacta</button>
+    </div>
+  </div>
+</div>
