--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -53,10 +53,14 @@ a:hover {
 }
 
 .btn-primary {
-  @apply bg-primary-400 text-basic-500 border-primary-500 hover:bg-primary-500  disabled:cursor-default disabled:bg-primary-300;
+  @apply bg-primary-400 text-basic-500 border-primary-500 hover:bg-primary-500  disabled:cursor-default disabled:bg-primary-300 shadow-lg;
+}
+
+.btn-primary-dark {
+  @apply bg-primary-400 text-basic-500 border-primary-500 hover:bg-primary-500  disabled:cursor-default disabled:bg-primary-300 dark:bg-basic-400 dark:hover:bg-basic-500 dark:disabled:bg-basic-300 dark:text-secondary-500 shadow-lg;
 }
 .btn-secondary {
-  @apply bg-secondary-400 text-basic-500 border-secondary-500 hover:bg-secondary-500 disabled:cursor-default disabled:bg-secondary-300 dark:bg-primary-400 dark:border-primary-500 dark:hover:bg-primary-500 dark:disabled:bg-primary-300;
+  @apply bg-secondary-400 text-basic-500 border-secondary-500 hover:bg-secondary-500 disabled:cursor-default disabled:bg-secondary-300 dark:bg-primary-400 dark:border-primary-500 dark:hover:bg-primary-500 dark:disabled:bg-primary-300 shadow-lg;
 }
 
 .btn-secondary-dark {
@@ -159,7 +163,7 @@ input:-webkit-autofill:active {
   @apply mt-0 mb-2 text-danger text-left fs-xs flex flex-col;
 }
 .input-search {
-  @apply border-2 border-secondary-500 dark:border-none rounded-xl py-2 px-4 w-full my-2 shadow-thick shadow-secondary-500 dark:shadow-primary-500 outline-none transform transition-all duration-100 active:shadow-none active:translate-y-[3px] active:translate-x-[3px];
+  @apply border-2 border-secondary-500 dark:border-none rounded-xl py-2 px-4 w-full my-2 shadow-thick shadow-secondary-500 dark:shadow-primary-500 outline-none transform transition-all duration-100 active:shadow-none active:translate-y-[3px] active:translate-x-[3px] dark:text-secondary-500;
 }
 
 .shadow-thick-secondary {
