forgot passwor fix

--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -92,7 +92,7 @@
         [routerLink]="['/recipes']"
         routerLinkActive="router-link-active"
         class="uppercase"
-        >Recipes</a
+        >Recetas</a
       >
       <a
         [routerLink]="['/components']"
