--- a/frontend/src/app/shared/components/landing-page/landing-page.component.html
+++ b/frontend/src/app/shared/components/landing-page/landing-page.component.html
@@ -19,7 +19,7 @@
   </div>
   <div class="flex w-full justify-center flex-wrap mb-6">
     <div
-      class="w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
+      class="animate__animated animate__backInLeft w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
     >
       <img
         src="../../../../assets/images/organisation.svg"
@@ -33,7 +33,7 @@
       </h3>
     </div>
     <div
-      class="w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
+      class="animate__animated animate__backInUp w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
     >
       <img
         src="../../../../assets/images/morter.svg"
@@ -47,7 +47,7 @@
       </h3>
     </div>
     <div
-      class="w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
+      class="animate__animated animate__backInUp w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
     >
       <img
         src="../../../../assets/images/magnifying_gass.svg"
@@ -61,7 +61,7 @@
       </h3>
     </div>
     <div
-      class="w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
+      class="animate__animated animate__backInRight w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
     >
       <img
         src="../../../../assets/images/filter.svg"
@@ -77,15 +77,17 @@
   </div>
   <div>
     <div class="my-10">
-      <h3 class="text-blue-500 font-black uppercase text-lg tracking-wider">
-        <span class="text-2xl">F</span>ormula tus productos de forma rápida,
-        sencilla y con la infomación 100% accesible
-      </h3>
-      <p class="max-w-[600px]">
-        Filtra las recetas por las propiedades heredadas de los componentes que
-        la forman; o si lo prefieres utiliza el buscador para encontrar según el
-        nombre que le hayas puesto.
-      </p>
+      <div class="">
+        <h3 class="text-blue-500 font-black uppercase text-lg tracking-wider">
+          <span class="text-2xl">F</span>ormula tus productos de forma rápida,
+          sencilla y con la infomación 100% accesible
+        </h3>
+        <p class="max-w-[600px]">
+          Filtra las recetas por las propiedades heredadas de los componentes
+          que la forman; o si lo prefieres utiliza el buscador para encontrar
+          según el nombre que le hayas puesto.
+        </p>
+      </div>
       <div class="relative my-10">
         <video
           src="../../../../assets/images/formulation_presentation.mkv"
@@ -101,14 +103,16 @@
       </div>
     </div>
     <div class="my-10">
-      <h3 class="text-orange-500 font-black uppercase text-lg tracking-wider">
-        <span class="text-2xl">E</span>ncuentra tus recetas con facilidad
-      </h3>
-      <p class="max-w-[600px]">
-        Filtra las recetas por las propiedades heredadas de los componentes que
-        la forman; o si lo prefieres utiliza el buscador para encontrar según el
-        nombre que le hayas puesto.
-      </p>
+      <div class="">
+        <h3 class="text-orange-500 font-black uppercase text-lg tracking-wider">
+          <span class="text-2xl">E</span>ncuentra tus recetas con facilidad
+        </h3>
+        <p class="max-w-[600px]">
+          Filtra las recetas por las propiedades heredadas de los componentes
+          que la forman; o si lo prefieres utiliza el buscador para encontrar
+          según el nombre que le hayas puesto.
+        </p>
+      </div>
       <div class="relative my-10">
         <video
           src="../../../../assets/images/search_presentation.mkv"
@@ -124,14 +128,19 @@
       </div>
     </div>
     <div class="my-10">
-      <h3 class="text-purple-500 font-black uppercase text-lg tracking-wider text-right">
-        <span class="text-2xl">C</span>rea componentes asignandole las
-        propiedades que necesites
-      </h3>
-      <p class="max-w-[600px] ml-auto mr-0 text-right">
-        Al crear los componentes para tus recetas podrás crear las propiedades
-        que lo definen y que permitirán un filtrado mucho más sencillo y rápido.
-      </p>
+      <div class="">
+        <h3
+          class="text-purple-500 font-black uppercase text-lg tracking-wider text-right"
+        >
+          <span class="text-2xl">C</span>rea componentes asignandole las
+          propiedades que necesites
+        </h3>
+        <p class="max-w-[600px] ml-auto mr-0 text-right">
+          Al crear los componentes para tus recetas podrás crear las propiedades
+          que lo definen y que permitirán un filtrado mucho más sencillo y
+          rápido.
+        </p>
+      </div>
       <div class="relative my-10">
         <video
           src="../../../../assets/images/components_presentation.mkv"
@@ -147,15 +156,19 @@
       </div>
     </div>
     <div class="my-10">
-      <h3 class="text-primary-500 font-black uppercase text-lg tracking-wider text-center">
-        <span class="text-2xl">C</span>rea distintos perfiles para gestionar
-        distintos tipos de productos
-      </h3>
-      <p class="max-w-[600px] m-auto text-center">
-        Crea distintos perfiles, a cada uno de ellos podrás asignarle distintas
-        propiedades, composiciones y fases. Así como mantener almacenados los
-        componentes y recetas de forma separada y ordenada.
-      </p>
+      <div class="">
+        <h3
+          class="text-primary-500 font-black uppercase text-lg tracking-wider text-center"
+        >
+          <span class="text-2xl">C</span>rea distintos perfiles para gestionar
+          distintos tipos de productos
+        </h3>
+        <p class="max-w-[600px] m-auto text-center">
+          Crea distintos perfiles, a cada uno de ellos podrás asignarle
+          distintas propiedades, composiciones y fases. Así como mantener
+          almacenados los componentes y recetas de forma separada y ordenada.
+        </p>
+      </div>
       <div class="relative my-10">
         <video
           src="../../../../assets/images/profiles_presentation.mkv"
