--- a/frontend/src/app/shared/components/feedback/feedback.component.html
+++ b/frontend/src/app/shared/components/feedback/feedback.component.html
@@ -1,3 +1,6 @@
-<div class="text-basic-500 p-0 -translate-y-full transition ease-in-out delay-10 duration-200" id="feedback">
-    <span id="feedback-msg"></span>
+<div
+  class="animate__animated animate__bounceInDown text-basic-500 p-0 -translate-y-full transition ease-in-out delay-10 duration-200"
+  id="feedback"
+>
+  <span id="feedback-msg"></span>
 </div>
