front end fixes update netlify redirect

--- a/frontend/src/app/recipes/components/recipes/recipes.component.html
+++ b/frontend/src/app/recipes/components/recipes/recipes.component.html
@@ -5,7 +5,7 @@
     <h2>Recetas</h2>
     <div class="flex flex-row justify-between w-full">
       <span class="md:before:content-['|'] md:before:mx-4"
-        >{{ recipes?.length || 0 }} componentes</span
+        >{{ recipes?.length || 0 }} recetas</span
       >
     </div>
   </div>
