--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -10,7 +10,7 @@
         class="logo-img"
       />
       <h1
-        class="text-secondary-500 dark:text-basic-500 text-4xl mb-0 block"
+        class="text-secondary-500 dark:text-basic-500 text-3xl sm:text-4xl mb-0 block"
       >
         Mesta
       </h1></a
