--- a/frontend/src/app/shared/components/landing-page/landing-page.component.html
+++ b/frontend/src/app/shared/components/landing-page/landing-page.component.html
@@ -17,9 +17,9 @@
       </span>
     </div>
   </div>
-  <div class="flex w-full justify-center flex-wrap mb-6">
+  <div class="w-full grid grid-cols-2 grid-rows-2 sm:grid-cols-4 sm:grid-rows-1 mb-20">
     <div
-      class="animate__animated animate__backInLeft w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
+      class="animate__animated animate__backInLeft flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2 p-4"
     >
       <img
         src="../../../../assets/images/organisation.svg"
@@ -28,12 +28,12 @@
         height="auto"
         class="self-center"
       />
-      <h3 class="text-center mt-2 dark:text-secondary-500">
+      <h3 class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all">
         Administración de datos
       </h3>
     </div>
     <div
-      class="animate__animated animate__backInUp w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
+      class="animate__animated animate__backInUp flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2 p-4"
     >
       <img
         src="../../../../assets/images/morter.svg"
@@ -42,12 +42,12 @@
         height="auto"
         class="self-center"
       />
-      <h3 class="text-center mt-2 dark:text-secondary-500">
+      <h3 class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all">
         Formulación sencilla
       </h3>
     </div>
     <div
-      class="animate__animated animate__backInUp w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
+      class="animate__animated animate__backInUp flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2 p-4"
     >
       <img
         src="../../../../assets/images/magnifying_gass.svg"
@@ -56,12 +56,12 @@
         height="auto"
         class="self-center"
       />
-      <h3 class="text-center mt-2 dark:text-secondary-500">
+      <h3 class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all">
         Acceso customizado
       </h3>
     </div>
     <div
-      class="animate__animated animate__backInRight w-[200px] h-[200px] flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2"
+      class="animate__animated animate__backInRight flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2 p-4"
     >
       <img
         src="../../../../assets/images/filter.svg"
@@ -70,13 +70,13 @@
         height="auto"
         class="self-center"
       />
-      <h3 class="text-center mt-2 dark:text-secondary-500">
+      <h3 class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all">
         Filtrado de datos
       </h3>
     </div>
   </div>
   <div>
-    <div class="my-10">
+    <div class="my-20">
       <div class="">
         <h3 class="text-blue-500 font-black uppercase text-lg tracking-wider">
           <span class="text-2xl">F</span>ormula tus productos de forma rápida,
@@ -102,7 +102,7 @@
         ></div>
       </div>
     </div>
-    <div class="my-10">
+    <div class="my-20">
       <div class="">
         <h3 class="text-orange-500 font-black uppercase text-lg tracking-wider">
           <span class="text-2xl">E</span>ncuentra tus recetas con facilidad
@@ -127,7 +127,7 @@
         ></div>
       </div>
     </div>
-    <div class="my-10">
+    <div class="my-20">
       <div class="">
         <h3
           class="text-purple-500 font-black uppercase text-lg tracking-wider text-right"
@@ -155,7 +155,7 @@
         ></div>
       </div>
     </div>
-    <div class="my-10">
+    <div class="my-20">
       <div class="">
         <h3
           class="text-primary-500 font-black uppercase text-lg tracking-wider text-center"
@@ -200,7 +200,7 @@
     </div>
   </div>
   <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 my-20" id="contact">
-    <div class="flex justify-end flex-col gap-4">
+    <div class="row-start-1 sm:col-start-1 flex justify-end flex-col gap-4">
       <p class="text-xl uppercase font-black text-primary-500 max-w-[400px]">
         ¿ <span class="text-2xl"> A</span>ún tienes dudas?
         <span class="text-2xl">C</span>ontacta con nosotras para cualquier
@@ -219,7 +219,7 @@
         </div>
       </div>
     </div>
-    <div>
+    <div class="row-start-2 sm:row-start-1 sm:col-start-2 sm:col-end-3">
       <div class="custom-input-labeled">
         <textarea
           name="description"
@@ -229,7 +229,7 @@
         ></textarea>
       </div>
     </div>
-    <div class="w-full flex mt-4 col-start-1 col-end-3">
+    <div class="row-start-3 w-full flex mt-4 col-start-1 col-end-3">
       <button class="btn btn-primary m-auto self-center">Contacta</button>
     </div>
   </div>
