--- a/frontend/src/app/user/components/user-configuration/user-configuration.component.html
+++ b/frontend/src/app/user/components/user-configuration/user-configuration.component.html
@@ -18,7 +18,7 @@
       <a
         class="cursor-pointer text-primary-500 hover:text-primary-900 px-2 py-4"
         (click)="scroller.scrollToAnchor('account')"
-        >Mi cuenta</a
+        >Cuenta</a
       >
       <a
         class="cursor-pointer text-primary-500 hover:text-primary-900 px-2 py-4"
@@ -71,7 +71,7 @@
           </div>
 
           <div class="mt-2 mb-2">
-            <label for="email">Email</label>
+            <label for="email">Correo electrónico</label>
             <div class="flex gap-1">
               <input
                 type="email"
@@ -128,7 +128,7 @@
         <hr class="text-secondary-50 my-8" />
       </section>
       <section id="account">
-        <h2>Configuración</h2>
+        <h2>Cuenta</h2>
         <div class="flex flex-col mt-2">
           <a
             class="text-secondary-500 dark:text-basic-500 hover:text-primary-500 dark:hover:text-primary-500 py-2 "
