--- a/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
@@ -18,7 +18,7 @@
           class="form-errors"
         >
           <span *ngIf="email.errors.required">Campo obligatorio</span>
-          <div *ngIf="email.errors.pattern">Email not a valid format.</div>
+          <div *ngIf="email.errors.pattern">El correo electrónico no es válido</div>
         </div>
       </div>
 
