--- a/frontend/src/app/user/components/register/register.component.html
+++ b/frontend/src/app/user/components/register/register.component.html
@@ -17,10 +17,10 @@
         >
           <div *ngIf="name.errors.required">Campo obligatorio</div>
           <div *ngIf="name.errors.minlength">
-            Name must be at least 5 characters long.
+            El nombre debe tener más de 5 caracteres.
           </div>
           <div *ngIf="name.errors.maxlength">
-            Name can be max 25 characters long.
+            El nombre no puede superar los 25 caracteres.
           </div>
         </div>
       </div>
