--- a/frontend/src/app/shared/components/feedback/feedback.component.html
+++ b/frontend/src/app/shared/components/feedback/feedback.component.html
@@ -1,5 +1,5 @@
 <div
-  class="animate__animated animate__slideInDown text-basic-500 p-0 -translate-y-full transition ease-in-out delay-10 duration-200 flex justify-between w-full "
+  class="animate__animated animate__slideInDown text-basic-500 p-0 -translate-y-full transition ease-in-out delay-10 duration-200 flex justify-between w-full fixed z-10"
   #toast
 >
   <span #content></span>
