--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -25,7 +25,7 @@
         </button>
       </div>
       <div class="hidden md:block">
-        <a href="#contact" class=""> Contacto </a>
+        <a (click)="goToContact()" > Contacto </a>
         <a
           [routerLink]="['/login']"
           routerLinkActive="router-link-active"
