--- a/frontend/src/app/shared/components/landing-page/landing-page.component.html
+++ b/frontend/src/app/shared/components/landing-page/landing-page.component.html
@@ -5,8 +5,6 @@
     >
       <span class="text-3xl">C</span>rea tus propias formulaciones de forma
       fácil y sencilla, guárdalas y accede a ellas siempre que lo necesites.
-      <span class="text-3xl">D</span>ispón de los componentes organizados y
-      accesibles.
     </h2>
     <div class="max-w-[600px] m-auto mt-2">
       <span>
@@ -17,7 +15,9 @@
       </span>
     </div>
   </div>
-  <div class="w-full grid grid-cols-2 grid-rows-2 sm:grid-cols-4 sm:grid-rows-1 mb-20">
+  <div
+    class="w-full grid grid-cols-2 grid-rows-2 sm:grid-cols-4 sm:grid-rows-1 mb-20"
+  >
     <div
       class="animate__animated animate__backInLeft flex flex-col justify-center align-center rounded-xl bg-basic-500 shadow-md m-2 p-4"
     >
@@ -28,7 +28,9 @@
         height="auto"
         class="self-center"
       />
-      <h3 class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all">
+      <h3
+        class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all"
+      >
         Administración de datos
       </h3>
     </div>
@@ -42,7 +44,9 @@
         height="auto"
         class="self-center"
       />
-      <h3 class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all">
+      <h3
+        class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all"
+      >
         Formulación sencilla
       </h3>
     </div>
@@ -56,7 +60,9 @@
         height="auto"
         class="self-center"
       />
-      <h3 class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all">
+      <h3
+        class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all"
+      >
         Acceso customizado
       </h3>
     </div>
@@ -70,7 +76,9 @@
         height="auto"
         class="self-center"
       />
-      <h3 class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all">
+      <h3
+        class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all"
+      >
         Filtrado de datos
       </h3>
     </div>
@@ -199,7 +207,12 @@
       </button>
     </div>
   </div>
-  <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 my-20" id="contact">
+  <form
+    [formGroup]="contactForm"
+    (ngSubmit)="onSubmitContactForm()"
+    class="grid grid-cols-1 sm:grid-cols-2 gap-4 my-20"
+    id="contact"
+  >
     <div class="row-start-1 sm:col-start-1 flex justify-end flex-col gap-4">
       <p class="text-xl uppercase font-black text-primary-500 max-w-[400px]">
         ¿ <span class="text-2xl"> A</span>ún tienes dudas?
@@ -208,29 +221,59 @@
       </p>
       <div class="flex gap-4 flex-col">
         <div class="custom-input-labeled">
-          <input type="text" class="dark-input" placeholder="Nombre" />
+          <input
+            type="text"
+            class="dark-input"
+            placeholder="Nombre"
+            [formControl]="name"
+          />
+        </div>
+        <div
+          *ngIf="name.errors && (name.touched || name.dirty)"
+          class="form-errors"
+        >
+          <div *ngIf="name.errors.required">Campo obligatorio</div>
         </div>
         <div class="custom-input-labeled">
           <input
             type="email"
             class="dark-input"
             placeholder="Correo electrónico"
+            [formControl]="email"
           />
+        </div>
+        <div
+          *ngIf="email.errors && (email.touched || email.dirty)"
+          class="form-errors"
+        >
+          <div *ngIf="email.errors.required">Campo obligatorio</div>
+          <div *ngIf="email.errors.pattern">Formato de email no valido</div>
         </div>
       </div>
     </div>
     <div class="row-start-2 sm:row-start-1 sm:col-start-2 sm:col-end-3">
       <div class="custom-input-labeled">
         <textarea
-          name="description"
+          [formControl]="body"
           class="dark-input"
           rows="8"
           placeholder="Escribe aquí tus dudas"
         ></textarea>
       </div>
+      <div
+        *ngIf="body.errors && (body.touched || body.dirty)"
+        class="form-errors"
+      >
+        <div *ngIf="body.errors.required">Campo obligatorio</div>
+      </div>
     </div>
     <div class="row-start-3 w-full flex mt-4 col-start-1 col-end-3">
-      <button class="btn btn-primary m-auto self-center">Contacta</button>
+      <button
+        class="btn btn-primary m-auto self-center"
+        [disabled]="!contactForm.valid"
+      >
+        Contacta
+      </button>
     </div>
-  </div>
+  </form>
 </div>
