--- a/frontend/src/app/components/components/components/components.component.html
+++ b/frontend/src/app/components/components/components/components.component.html
@@ -59,6 +59,7 @@
     <div
       class="w-full mx-auto my-0"
       [ngClass]="{
+        'animate-pulse': loading,
         'md:w-[70%] lg:w-[80%]': !fromFormulation && !fromRecipeDetails
       }"
     >
