--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <div class="flex flex-col min-h-screen">
+  <app-loading></app-loading>
   <app-feedback></app-feedback>
   <app-header></app-header>
   <router-outlet></router-outlet>
