--- a/frontend/src/app/profiles/components/profile-item/profile-item.component.html
+++ b/frontend/src/app/profiles/components/profile-item/profile-item.component.html
@@ -13,12 +13,12 @@
     <div class="flex justify-between gap-2">
       <fa-icon
         [icon]="faTrash"
-        class="text-secondary-500 dark:text-basic-500 hover:text-danger z-10 text-3xl sm:text-base"
+        class="text-secondary-500 dark:text-basic-500 hover:text-danger drk:hover:text-danger z-10 text-3xl sm:text-base"
         (click)="deleteProfile($event)"
       ></fa-icon>
       <fa-icon
         [icon]="faPencil"
-        class="text-secondary-500 dark:text-basic-500 hover:text-primary-500 z-10 text-3xl sm:text-base"
+        class="text-secondary-500 dark:text-basic-500 hover:text-primary-500 dark:hover:text-primary-500 z-10 text-3xl sm:text-base"
         (click)="editProfile(profile?.id)"
       ></fa-icon>
     </div>
