--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,7 @@
-
-<div class="flex flex-col min-h-screen">
+<div
+  class="flex flex-col min-h-screen"
+  [ngClass]="{'background-image': isLogged}"
+>
   <app-loading></app-loading>
   <app-feedback></app-feedback>
   <app-header></app-header>
